<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FBF5EC"
    tools:context=".CastVote">

    <TextView
        android:id="@+id/txtpartyname"
        android:layout_width="146dp"
        android:layout_height="53dp"
        android:layout_marginStart="164dp"
        android:gravity="center"
        android:text="@string/party_name"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="SpUsage,TextSizeCheck" />

    <TextView
        android:id="@+id/txtpartysymbol"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/party_symbol"
        android:textSize="20sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toStartOf="@+id/txtpartyname"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imglistview"
        android:layout_width="133dp"
        android:layout_height="128dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtfieldname"
        android:layout_width="134dp"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="#9C1206"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/imglistview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtfieldarea"
        android:layout_width="119dp"
        android:layout_height="66dp"
        android:layout_marginTop="152dp"
        android:gravity="center"
        android:text="@string/txtfieldarea"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toEndOf="@+id/imglistview"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="82dp"
        android:layout_marginTop="216dp"
        android:background="@drawable/vote_button"
        android:text="VOTE"
        android:textColor="#FBF5EC"
        android:textSize="25dp"
        android:textStyle="bold"
        android:onClick="savePartyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>